; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_d3dx_free_param_eval.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_d3dx_free_param_eval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dx_param_eval = type { i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"peval %p.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @d3dx_free_param_eval(%struct.d3dx_param_eval* %0) #0 {
  %2 = alloca %struct.d3dx_param_eval*, align 8
  store %struct.d3dx_param_eval* %0, %struct.d3dx_param_eval** %2, align 8
  %3 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %2, align 8
  %4 = call i32 @TRACE(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), %struct.d3dx_param_eval* %3)
  %5 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %2, align 8
  %6 = icmp ne %struct.d3dx_param_eval* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %18

8:                                                ; preds = %1
  %9 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %2, align 8
  %10 = getelementptr inbounds %struct.d3dx_param_eval, %struct.d3dx_param_eval* %9, i32 0, i32 1
  %11 = call i32 @d3dx_free_preshader(i32* %10)
  %12 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %2, align 8
  %13 = getelementptr inbounds %struct.d3dx_param_eval, %struct.d3dx_param_eval* %12, i32 0, i32 0
  %14 = call i32 @d3dx_free_const_tab(i32* %13)
  %15 = call i32 (...) @GetProcessHeap()
  %16 = load %struct.d3dx_param_eval*, %struct.d3dx_param_eval** %2, align 8
  %17 = call i32 @HeapFree(i32 %15, i32 0, %struct.d3dx_param_eval* %16)
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @TRACE(i8*, %struct.d3dx_param_eval*) #1

declare dso_local i32 @d3dx_free_preshader(i32*) #1

declare dso_local i32 @d3dx_free_const_tab(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.d3dx_param_eval*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
